fixing bg shift on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -171,7 +171,7 @@ h3  {
 
     body {
 
-
+        height: 100%;
         background: url("/assets/images/grumble-bg-mobile.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
